# organization_app

./: .env  .gitignore  README.md  requirements.txt
auth/: pyproject.toml  readme.md
auth/auth_server/: alembic.ini  dependencies.py  exceptions.py  globals.py  main.py  middleware.py  settings.py  utils.py
auth/auth_server/alembic/: env.py
auth/auth_server/alembic/versions/: 78d6c6e5d569_auth_tables.py
auth/auth_server/models/: base_model.py  db_base.py  db_factory.py  db_postgre.py  enums.py  migrator.py  models.py
auth/auth_server/routers/: __init__.py  assignment.py  role.py  token.py  type.py  user.py
auth/auth_server/schemas/: assignment.py  role.py  token.py  type.py  user.py
auth/auth_server/services/: assignment.py  base.py  role.py  token.py  type.py  user.py
core_service/: pyproject.toml  readme.md
core_service/core_apis_server/: dependencies.py  exceptions.py  globals.py  main.py  middleware.py  settings.py  utils.py
core_service/core_apis_server/alembic/: env.py
core_service/core_apis_server/alembic/versions/: b5f2ea2b2e02_core_tables.py
core_service/core_apis_server/crud/: generic.py
core_service/core_apis_server/models/: base_model.py  db_base.py  db_factory.py  db_postgre.py  enums.py  migrator.py  models.py
core_service/core_apis_server/routers/: __init__.py  member.py  org.py  team.py
core_service/core_apis_server/schemas/: base.py  member.py  org.py  team.py
core_service/core_apis_server/services/: base.py  member.py  org.py  team.py
