[tool.poetry]
name = "auth_service"
version = "0.1.0"
description = "Authentication service for organization app"
authors = ["Chandaka Sampath <chandakasampath12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
sqlalchemy = "^2.0"
pydantic = "^2.3"
psycopg2-binary = "^2.9"
alembic = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
