[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core_service"
version = "0.1.0"
description = "Core Service for Organization Application"
authors = [
    { name = "Chandaka Sampath kumar", email = "chandakasampath12@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "psycopg2-binary",
    "alembic"
]
